# Project_imageENC

./: .gitignore  CMakeLists.txt  ConvertoBinary.h  README.md  dec.txt  image.c  main.c  out.txt
Enc/: secret  short
abandonedfiles/: main.c
direct_hiding/: CMakeLists.txt  enc_file.h  enc_rand.h  img_convert.h  main.cpp  math.h  math_rela.h  report.md
direct_hiding/chart/: 1.xlsx
direct_hiding/text_source/: secret  short
